[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--tb=short -ra --color=yes"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "icupy",
]

[tool.coverage.paths]
source = [
    "src/icupy",
    "*/icupy",
]

[tool.black]
line-length = 79
target-version = [
    "py311",
]
extend-exclude = """
^/src/third_party/
"""

[tool.isort]
line_length = 79
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip = [
    "src/third_party/",
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
verbosity = 0
