[build-system]
requires = [
    "setuptools>=61.0",
    "tomli",
]
build-backend = "setuptools.build_meta"

[project]
name = "icupy"
version = "0.20.0"
requires-python = ">=3.9"
description = "Python bindings for ICU4C"
authors = [
    { name = "Tetsuya Miura", email = "miute.dev@gmail.com" },
]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = [
    "icu4c",
    "unicode",
    "binding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
]

[project.urls]
ICU = "https://icu.unicode.org/home"
Download = "https://github.com/miute/icupy/releases"
Repository = "https://github.com/miute/icupy"
Changelog = "https://github.com/miute/icupy/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false

[tool.pytest.ini_options]
addopts = [
    "--tb=short",
    "-ra",
    "--color=yes",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = [
    "icupy",
]

[tool.coverage.paths]
source = [
    "src/icupy",
    "*/icupy",
]

[tool.black]
line-length = 79
target-version = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]
extend-exclude = """
^src/third_party
"""

[tool.isort]
line_length = 79
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
extend_skip = [
    "src/third_party",
]

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",
    "W503",
]
exclude = [
    "src/third_party",
]

[tool.mypy]
warn_unused_configs = true
warn_return_any = true
check_untyped_defs = true
verbosity = 0
exclude = [
    "^src/third_party",
]
