[metadata]
name = icupy
version = 0.11.1.dev1
description = Python bindings for ICU4C
long_description = file: README.md
long_description_content_type = text/markdown
author = Tetsuya Miura
author_email = miute.dev@gmail.com
url = https://github.com/miute/icupy
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Localization
license = MIT
keywords =
    icu4c
    binding

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
test = pytest
