[metadata]
name = icupy
version = 0.16.0
description = Python bindings for ICU4C
long_description = file: README.md
long_description_content_type = text/markdown
author = Tetsuya Miura
author_email = miute.dev@gmail.com
url = https://github.com/miute/icupy
download_url = https://github.com/miute/icupy/releases
project_urls =
    Changelog = https://github.com/miute/icupy/blob/main/CHANGELOG.md
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Localization
license = MIT
keywords =
    icu4c
    unicode
    binding

[options]
packages = find:
package_dir =
    = src
include_package_data = True
zip_safe = False
install_requires =
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
tests = pytest
